refactoring, XXH3 hash work, and added new web module for admin dashboard